[gd_scene load_steps=19 format=3 uid="uid://3dcgt4vq1u15"]

[ext_resource type="Texture2D" uid="uid://bdkqopxubk5wk" path="res://assets/kloofendal_48d_partly_cloudy_puresky_2k.exr" id="1_qeuh0"]
[ext_resource type="Script" path="res://assets/TableRoom.gd" id="1_yah35"]
[ext_resource type="PackedScene" uid="uid://cq52uiedrahl4" path="res://assets/blue_pusher.tscn" id="2_roamh"]
[ext_resource type="PackedScene" uid="uid://cmedwb4wiswdg" path="res://assets/red_pusher.tscn" id="3_0l84j"]
[ext_resource type="PackedScene" uid="uid://dffmqqdt0pvvr" path="res://assets/puck.tscn" id="4_5dbh7"]
[ext_resource type="PackedScene" uid="uid://bgifryudbqyy0" path="res://assets/table.tscn" id="5_axt8n"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_1xbs8"]
panorama = ExtResource("1_qeuh0")

[sub_resource type="Sky" id="Sky_fv38l"]
sky_material = SubResource("PanoramaSkyMaterial_1xbs8")

[sub_resource type="Environment" id="Environment_ft0pa"]
background_mode = 2
sky = SubResource("Sky_fv38l")
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_sky_contribution = 0.23
ambient_light_energy = 0.0
tonemap_mode = 2
ssr_fade_out = 5.65684
glow_intensity = 8.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gicq7"]
radius = 0.0662535
height = 0.414421

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_jb4lc"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_d0k7o"]
friction = 0.0
bounce = 0.51

[sub_resource type="BoxShape3D" id="BoxShape3D_e7ly1"]
size = Vector3(1, 1.11101, 1.9469)

[sub_resource type="BoxShape3D" id="BoxShape3D_ox4tf"]
size = Vector3(0.412937, 1, 2.06777)

[sub_resource type="BoxShape3D" id="BoxShape3D_oru0x"]
size = Vector3(0.689382, 1, 0.391366)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_5syyr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ebumx"]
size = Vector3(0.0810364, 0.0096517, 0.0796044)

[sub_resource type="BoxShape3D" id="BoxShape3D_iflaw"]
size = Vector3(0.226433, 1, 0.519339)

[node name="TableRoom" type="Node3D"]
script = ExtResource("1_yah35")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ft0pa")

[node name="BluePusher" parent="." instance=ExtResource("2_roamh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.509599, -0.204533)

[node name="RedPusher" parent="." instance=ExtResource("3_0l84j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.025972, 0.513727, 0.296587)

[node name="StaticBody3D" type="CharacterBody3D" parent="RedPusher"]
collision_priority = 2.0
motion_mode = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="RedPusher/StaticBody3D"]
shape = SubResource("CapsuleShape3D_gicq7")

[node name="TableAsset" parent="." instance=ExtResource("5_axt8n")]

[node name="RaycastSurfaceCollision" type="StaticBody3D" parent="TableAsset"]
collision_layer = 2
collision_mask = 2

[node name="TableSurface" type="CollisionShape3D" parent="TableAsset/RaycastSurfaceCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00271052, 0.50823, 0.00347635)
visible = false
shape = SubResource("WorldBoundaryShape3D_jb4lc")

[node name="PuckCollision" type="StaticBody3D" parent="TableAsset"]
physics_material_override = SubResource("PhysicsMaterial_d0k7o")

[node name="BottomWall" type="CollisionShape3D" parent="TableAsset/PuckCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00542104, -0.0341913, 0.0069527)
visible = false
shape = SubResource("BoxShape3D_e7ly1")

[node name="LeftWall" type="CollisionShape3D" parent="TableAsset/PuckCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.582427, 0.509037, 0)
visible = false
shape = SubResource("BoxShape3D_ox4tf")

[node name="RightWall" type="CollisionShape3D" parent="TableAsset/PuckCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.573182, 0.509037, 0)
visible = false
shape = SubResource("BoxShape3D_ox4tf")

[node name="CloseRightWall" type="CollisionShape3D" parent="TableAsset/PuckCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.495116, 0.509037, -0.915242)
visible = false
shape = SubResource("BoxShape3D_oru0x")

[node name="FarRightWall" type="CollisionShape3D" parent="TableAsset/PuckCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.495116, 0.509037, 0.908737)
visible = false
shape = SubResource("BoxShape3D_oru0x")

[node name="CloseCenterWall" type="CollisionShape3D" parent="TableAsset/PuckCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.509037, -0.998155)
visible = false
shape = SubResource("BoxShape3D_oru0x")

[node name="FarCenterWall" type="CollisionShape3D" parent="TableAsset/PuckCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.509, 0.998)
visible = false
shape = SubResource("BoxShape3D_oru0x")

[node name="CloseLeftWall" type="CollisionShape3D" parent="TableAsset/PuckCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.495, 0.509037, -0.915242)
visible = false
shape = SubResource("BoxShape3D_oru0x")

[node name="FarLeftWall" type="CollisionShape3D" parent="TableAsset/PuckCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.495, 0.509037, 0.908737)
visible = false
shape = SubResource("BoxShape3D_oru0x")

[node name="Puck" type="RigidBody3D" parent="TableAsset"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.228641, 0.524086, -0.0866885)
physics_material_override = SubResource("PhysicsMaterial_5syyr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TableAsset/Puck"]
visible = false
shape = SubResource("BoxShape3D_ebumx")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="TableAsset/Puck"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0)
visible = false
shape = SubResource("BoxShape3D_ebumx")

[node name="PuckAsset" parent="TableAsset/Puck" instance=ExtResource("4_5dbh7")]

[node name="CloseGoalCheck" type="Area3D" parent="TableAsset"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.462831, -1)

[node name="CloseGoal" type="CollisionShape3D" parent="TableAsset/CloseGoalCheck"]
shape = SubResource("BoxShape3D_iflaw")

[node name="FarGoalCheck" type="Area3D" parent="TableAsset"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.463, 1)

[node name="FarGoal" type="CollisionShape3D" parent="TableAsset/FarGoalCheck"]
shape = SubResource("BoxShape3D_iflaw")

[node name="TopCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.826098, 0)
projection = 1
size = 1.5
far = 10.0

[node name="3DCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.669027, 0.743238, 0, -0.743238, 0.669027, 0, 1.85717, 1.39235)
fov = 33.3
far = 100.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.737733, 0.600621, -0.308229, 0.28177, 0.688849, 0.667902, 0.613479, 0.405883, -0.677424, 0, 0, 0)
light_color = Color(1, 0.972549, 0.890196, 1)
shadow_enabled = true
shadow_blur = 0.238

[node name="RedBound" type="Node3D" parent="."]

[node name="MarkerNegative" type="Marker3D" parent="RedBound"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.303652, 0.526167, 0.0781027)
gizmo_extents = 0.1

[node name="MarkerPositive" type="Marker3D" parent="RedBound"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.304, 0.526, 0.64)
gizmo_extents = 0.1

[node name="BlueBound" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="MarkerPositive" type="Marker3D" parent="BlueBound"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.303652, 0.526167, 0.0781027)
gizmo_extents = 0.1

[node name="MarkerNegative" type="Marker3D" parent="BlueBound"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.304, 0.526, 0.64)
gizmo_extents = 0.1

[connection signal="body_entered" from="TableAsset/CloseGoalCheck" to="." method="_on_close_goal_entered"]
[connection signal="body_entered" from="TableAsset/FarGoalCheck" to="." method="_on_far_goal_entered"]
